--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#songsDiv{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: left;
+}
+
+#pageBox{
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  /* background: rgb(63,94,251);
+  background: radial-gradient(circle, rgba(63,94,251,1) 41%, rgba(252,70,107,1) 100%); */
 
-.App-link {
-  color: #61dafb;
-}
+  /* background: rgb(34,193,195);
+background: linear-gradient(145deg, rgba(34,193,195,1) 0%, rgba(253,45,234,1) 100%); */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* background: rgb(34,193,195);
+background: linear-gradient(145deg, rgba(34,193,195,0.7819502801120448) 0%, rgba(253,45,234,0.7707457983193278) 100%); */
+
+/* background: rgb(34,193,195);
+background: linear-gradient(145deg, rgba(34,193,195,0.47102591036414565) 0%, rgba(253,45,234,0.4374124649859944) 100%); */
+
+/* background: rgb(34,51,195);
+background: linear-gradient(145deg, rgba(34,51,195,0.47102591036414565) 0%, rgba(149,45,253,0.4374124649859944) 100%); */
+
+background: rgb(0,255,226);
+background: linear-gradient(145deg, rgba(0,255,226,0.3253676470588235) 0%, rgba(255,0,245,0.24693627450980393) 100%);
 }
