--- a/src/components/SongBox/SongBox.css
+++ b/src/components/SongBox/SongBox.css
@@ -1,23 +1,26 @@
 #songBoxDiv{
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
-    height: 64px;
+    height: 10%;
     padding: 10px;
     margin: 5px;
     gap: 25px;
     border: 1px solid;
     border-radius: 10px;
+    flex-grow: inherit;
+    flex-shrink: inherit;
 }
 
 #currentSongBoxDiv{
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
-    height: 64px;
     padding: 10px;
     margin: 5px;
     gap: 25px;
     border: 1px solid;
     border-radius: 10px;
+    flex-grow: inherit;
+    flex-shrink: inherit;
 }
 
 
@@ -40,14 +43,26 @@
     margin: 0px;
 }
 
+#currSongTime{
+    margin-left: 10px;
+}
+
 #longBox{
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    /* gap: 50%; */
+    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #songImage{
     border-radius: 100px;
+    max-width: 100%;
+}
+
+#songImageBox{
+    max-width: 10%;
 }
 
 #songImage:hover{
